finishing opp list filters
Former-commit-id: 3c82fb0ccd92ba074d0fda00dba17931e951d78a [formerly 25820a7297c6813719042c52ecef1e96ff2653f8] [formerly 74ca12c363df002e838252b8c987cecbeee12ff2 [formerly ac3d9734b5df35d21ed01de6e7743d4df29f094f]]
Former-commit-id: 09f45055bbaf502aa4906b8285df73576aefdaab [formerly c221e2b7b9e4c84989cd57f5343a0e1669eca26a]
Former-commit-id: 317b00cdd0f46931838712d33575340a7367a673

--- a/templates/opportunities/opportunity_list.html
+++ b/templates/opportunities/opportunity_list.html
@@ -124,17 +124,17 @@
                   <ul class="dropdown-menu drp-dwn-right">
                     <li role="presentation" class="dropdown-header cus-dropdown-header">{{ _("Filter by")}}</li>
                     <li class="ng-menu">
-                     <a ng-click="opportunityFilterBy('all');"><i class=" checkFilterMenu fa"  ng-class="{'fa-check': opportunitiesfilter == 'all'}"></i>{{ _("All Opportunities")}}</a>
+                     <a ng-click="currentFilters.owner='all';AllFilters(currentFilters)"><i class=" checkFilterMenu fa"  ng-class="{'fa-check': currentFilters.owner == 'all'}"></i>{{ _("All Opportunities")}}</a>
                     </li>
                     <li class="ng-menu">
-                      <a ng-click="opportunityFilterBy('my','{{ME}}');"> <i class="checkFilterMenu fa" ng-class="{'fa-check': opportunitiesfilter == 'my'}"></i>{{ _("My  Opportunities")}}</a>
+                      <a ng-click="currentFilters.owner='{{ME}}';AllFilters(currentFilters)"> <i class="checkFilterMenu fa" ng-class="{'fa-check': currentFilters.owner != 'all'}"></i>{{ _("My  Opportunities")}}</a>
                     </li>
                     <li role="presentation" class="dropdown-header cus-dropdown-header">{{ _("Order by")}}</li>
                     <li class="ng-menu">
-                      <a ng-click="filterOppBy('updated_at')" href=""><i class=" checkFilterMenu fa"  ng-class="{'fa-check': order == 'updated_at'||order == '-updated_at'}"></i>{{ _("Last modified")}}</a>
+                      <a ng-click="currentFilters.orderBy='-updated_at';AllFilters(currentFilters)" href=""><i class=" checkFilterMenu fa"  ng-class="{'fa-check': order == 'updated_at'||order == '-updated_at'}"></i>{{ _("Last modified")}}</a>
                     </li>    
                     <li class="ng-menu">
-                      <a ng-click="filterOppBy('name')" href="" ><i class=" checkFilterMenu fa"  ng-class="{'fa-check': order == 'name'}"></i>{{ _("Name")}}</a>
+                      <a ng-click="currentFilters.orderBy='-name';AllFilters(currentFilters)" href="" ><i class=" checkFilterMenu fa"  ng-class="{'fa-check': order == 'name'}"></i>{{ _("Name")}}</a>
                     </li>                
                   </ul>
               </div>
