working on typeahead search
Former-commit-id: 7a3a9961c0b8f996f4e2dd668af5b711e1949e8b [formerly f3f1f4684f52d6038cc9f69ad0e7717c43284d97] [formerly 87e6aafdb1b473398d9b469ab9c5199f811cd7fe [formerly 824db1ae2997e42e32c12bd1d0c9d4631d710a4f]]
Former-commit-id: 0a3fa536ced44667b871b50c61a746317728142b [formerly 4488411d5c2e3890007c074626506973517af438]
Former-commit-id: 56fbc2d140216df119f40ecedd35d806c02e1359

--- a/templates/base.html
+++ b/templates/base.html
@@ -81,9 +81,9 @@
                                <img id="iogrowSearchIcon" ng-click="iogrowSearchSwitch()" ng-src="static/img/sm-iogrow-<%=iogrowSearch%>.png" style="height: 20px;margin-right: 3px;">
                                 <i  class="fa fa-linkedin-square" ng-class="{true:'linkedInSelected'}[linkedSearch]" style=" font-size: 20px; vertical-align: baseline;color: rgb(195, 195, 195);  /* margin-right: -1px; */ top: 3px; position: absolute;" ng-click="linkedinSearchSwitch()"></i>
                            </div> -->
-                    <input type="text" ng-model="searchQuery"
-                           typeahead="result as result.title + ' (' + result.type + ')' for result in results | filter:$viewValue | limitTo:8"
-                           typeahead-on-select="selectResult()" class="form-control" placeholder="{{ _('Search') }}"
+                    <input type="text" ng-class="{'spinner':resultsLoading}" ng-model="searchQuery"
+                           typeahead="result as result.title + ' (' + result.type + ')' for result in getResults($viewValue) | filter:$viewValue | limitTo:8"
+                           typeahead-on-select="selectResult()" class="form-control" typeahead-loading="resultsLoading" placeholder="{{ _('Search') }}"
                            style="padding-left: 10px;">
                 </div>
                 <button class="gbqfb gbqfb-hvr"><span class="gbqfi"></span></button>
