--- a/templates/contacts/contact_new.html
+++ b/templates/contacts/contact_new.html
@@ -179,14 +179,11 @@
                                                 </div>
                                             </div>
                                             <div class="col-md-6">
-                                                <div class="form-group">
+                                                <div class="form-group asyncSearch">
                                                     <label class="control-label col-md-4">{{ _('Company')}}</label>
 
                                                     <div class="col-md-8">
-                                                        <input type="text" ng-model="searchAccountQuery"
-                                                               typeahead="result as result.name  for result in accountsResults | filter:$viewValue | limitTo:10"
-                                                               typeahead-on-select="selectAccount()"
-                                                               class="form-control">
+                                                          <input type="text" ng-model="searchAccountQuery" typeahead="result as result.name  for result in accountsResults | filter:$viewValue | limitTo:10" typeahead-on-select="selectAccount()" class="form-control">
                                                     </div>
                                                 </div>
                                             </div>
