--- a/templates/opportunities/opportunity_list.html
+++ b/templates/opportunities/opportunity_list.html
@@ -117,9 +117,9 @@
       <td class="settingsTd">
             <div style=" padding-left: 10px;" class="pull-right">
              
-              <div class="btn-group hide_sm" style="margin-left: 8px; margin-right: 0px; vertical-align: baseline;">
+              <div class="btn-group hide_sm" ng-class="{'filterSelected': currentFilters.owner!='all'}" style="margin-left: 8px; margin-right: 0px; vertical-align: baseline;">
                   <a class="headerBtn" title="Filter/Sort options" data-toggle="dropdown"> 
-                      <i class="fa  fa-filter" style="padding-top: 6px; font-size: 16px;"></i>
+                      <i class="fa  fa-filter"  style="padding-top: 6px; font-size: 16px;"></i>
                   </a>
                   <ul class="dropdown-menu drp-dwn-right">
                     <li role="presentation" class="dropdown-header cus-dropdown-header">{{ _("Filter by")}}</li>
@@ -131,10 +131,10 @@
                     </li>
                     <li role="presentation" class="dropdown-header cus-dropdown-header">{{ _("Order by")}}</li>
                     <li class="ng-menu">
-                      <a ng-click="currentFilters.orderBy='-updated_at';AllFilters(currentFilters)" href=""><i class=" checkFilterMenu fa"  ng-class="{'fa-check': order == 'updated_at'||order == '-updated_at'}"></i>{{ _("Last modified")}}</a>
+                      <a ng-click="currentFilters.orderBy='-updated_at'; AllFilters(currentFilters)" href=""><i class=" checkFilterMenu fa"  ng-class="{'fa-check': currentFilters.orderBy=='updated_at'||currentFilters.orderBy=='-updated_at'}"></i>{{ _("Last modified")}}</a>
                     </li>    
                     <li class="ng-menu">
-                      <a ng-click="currentFilters.orderBy='-name';AllFilters(currentFilters)" href="" ><i class=" checkFilterMenu fa"  ng-class="{'fa-check': order == 'name'}"></i>{{ _("Name")}}</a>
+                      <a ng-click="currentFilters.orderBy='-name'; AllFilters(currentFilters)" href="" ><i class=" checkFilterMenu fa"  ng-class="{'fa-check': currentFilters.orderBy=='-name'||currentFilters.orderBy=='name'}"></i>{{ _("Name")}}</a>
                     </li>                
                   </ul>
               </div>
