finishing implementation of new typeahead on oppo
Former-commit-id: 2ce4b5b45232c177b68dfccfa7175c7849b732df [formerly 98d73cf79f7515a25f95cef549cb91746a6fb442] [formerly c2a2e6d3ec6013cc3c95ab2fa06f5e19d239aab5 [formerly bfe492b17e0dc5c2759a0a829b27f2561b7fe02b]]
Former-commit-id: 3882ecb0df4e457b5bd380ef75370b652879b145 [formerly 7937271aa3998d367aeb3934ae5cb2e534e700a1]
Former-commit-id: d94bf166af0c061d11114e5536a8a3566cee859e

--- a/templates/opportunit_new.html
+++ b/templates/opportunit_new.html
@@ -256,7 +256,7 @@
                                           <div class="col-md-12" ng-class="{ 'has-error': oppo_err.account && oppo_err.contact }" >
                                            <div class="input-icon">
                                              <i class="fa fa-building"></i>
-                                             <input type="text" required  ng-model="searchAccountQuery" typeahead="accountResult as accountResult.name  for accountResult in accountsResults | filter:$viewValue | limitTo:10" typeahead-on-select="selectAccount()" class="form-control" placeholder="{{_('Account')}}">
+                                             <input type="text" required  ng-class="{'spinner':acResultsLoading}"ng-model="searchAccountQuery" typeahead="accountResult as accountResult.name  for accountResult in getResults($viewValue) | filter:$viewValue | limitTo:10" typeahead-on-select="selectAccount()" class="form-control" placeholder="{{_('Account')}}" typeahead-loading="acResultsLoading">
                                            </div>
                                           </div>
                                         </div>
