--- a/templates/opportunities/opportunity_new.html
+++ b/templates/opportunities/opportunity_new.html
@@ -254,9 +254,9 @@
                                       <div class="col-md-12">
                                         <div class="form-group">
                                           <div class="col-md-12" ng-class="{ 'has-error': oppo_err.account && oppo_err.contact }" >
-                                           <div class="input-icon">
+                                           <div class="input-icon asyncSearch" >
                                              <i class="fa fa-building"></i>
-                                             <input type="text" required  ng-model="searchAccountQuery" typeahead="accountResult as accountResult.name  for accountResult in accountsResults | filter:$viewValue | limitTo:10" typeahead-on-select="selectAccount()" class="form-control" placeholder="{{_('Account')}}">
+                                             <input type="text"  required  typeahead-loading="accSearchLoading" ng-class="{'spinner':accSearchLoading}" ng-model="searchAccountQuery" typeahead="accountResult as accountResult.name  for accountResult in getResults($viewValue,'/crmengine/v1/accounts/search') | filter:$viewValue | limitTo:10" typeahead-on-select="selectAccount()" class="form-control" placeholder="{{_('Account')}}" >
                                            </div>
                                           </div>
                                         </div>
@@ -421,9 +421,9 @@
                                     </div>-->
                                     <div class="col-md-8">
                                         <div class="" style="margin-bottom:15px">
-                                              <div class="input-icon">
+                                              <div class="input-icon asyncSearch">
                                                <i class="fa fa-search"></i>
-                                                <input type="text" ng-model="searchCompetitorQuery" typeahead="competitorResult as competitorResult.name  for competitorResult in competitorsResult | filter:$viewValue | limitTo:10" typeahead-on-select="selectCompetitor()" ng-enter="selectCompetitor()" class="form-control" placeholder="{{_('Search for an existing competitor ...')}}" style="padding-left: 24px!important;">
+                                                <input type="text" ng-model="searchCompetitorQuery" typeahead-loading="compSearchLoading" ng-class="{'spinner':compSearchLoading}"  typeahead="competitorResult as competitorResult.name  for competitorResult in getResults($viewValue,'/crmengine/v1/accounts/search') | filter:$viewValue | limitTo:10" typeahead-on-select="selectCompetitor()" ng-enter="selectCompetitor()" class="form-control" placeholder="{{_('Search for an existing competitor ...')}}" style="padding-left: 24px!important;">
                                               </div>
                                         </div>
                                         <ul class="list-unstyled contact-infos infoslist">
@@ -582,9 +582,9 @@
                                       <div class="clearfix"></div>
                                   </ul>
                                   <div class="" style="margin-bottom:15px">
-                                          <div class="input-icon">
+                                          <div class="input-icon asyncSearch" >
                                            <i class="fa fa-search"></i>
-                                            <input type="text"  ng-model="searchContactQuery" typeahead="contactResult as contactResult.firstname + ' '+  contactResult.lastname for contactResult in contactsResults | filter:$viewValue | limitTo:10" typeahead-on-select="selectContact()" ng-enter="selectContact()" class="form-control" placeholder="{{_('Search for an existing contact ...')}}">
+                                            <input type="text"  ng-model="searchContactQuery" typeahead-loading="conSearchLoading" ng-class="{'spinner':conSearchLoading}" typeahead="contactResult as contactResult.firstname + ' '+  contactResult.lastname for contactResult in getResults($viewValue,'/crmengine/v1/contacts/search') | filter:$viewValue | limitTo:10" typeahead-on-select="selectContact()" ng-enter="selectContact()" class="form-control" placeholder="{{_('Search for an existing contact ...')}}">
                                           </div>
                                   </div>
                                  
