--- a/templates/opportunities/opportunity_show.html
+++ b/templates/opportunities/opportunity_show.html
@@ -505,7 +505,7 @@
                                         <div class="" ng-class="{ 'has-error': oppo_err.account && oppo_err.contact }" style="margin-bottom:15px">
                                               <div class="input-icon">
                                                <i class="fa fa-search"></i>
-                                                <input type="text" required ng-model="searchCompetitorQuery" typeahead="competitorResult as competitorResult.name  for competitorResult in competitorsResult | filter:$viewValue | limitTo:10" typeahead-on-select="selectCompetitor()" ng-enter="selectCompetitor()" class="form-control" placeholder="{{_('  Add a competitor...')}}" style="padding-left: 24px!important;">
+                                                <input type="text" typeahead-loading="compSearchLoading" ng-class="{'spinner':compSearchLoading}" required ng-model="searchCompetitorQuery" typeahead="competitorResult as competitorResult.name  for competitorResult in getResults($viewValue,'/crmengine/v1/accounts/search') | filter:$viewValue | limitTo:10" typeahead-on-select="selectCompetitor()" ng-enter="selectCompetitor()" class="form-control" placeholder="{{_('  Add a competitor...')}}" style="padding-left: 24px!important;">
                                               </div>
                                         </div>
                                         <ul class="list-unstyled contact-infos infoslist">
@@ -709,7 +709,7 @@
                                   </ul>
                                   <div class="" ng-class="{ 'has-error': oppo_err.account && oppo_err.contact }" style="margin-bottom:15px">
                                            <div class=""  style="margin-top:10px">
-                                              <input type="text" required ng-model="searchRelatedContactQuery" typeahead="relatedContactResult as relatedContactResult.firstname + ' '+  relatedContactResult.lastname for relatedContactResult in relatedContactsResults | filter:$viewValue | limitTo:10" typeahead-on-select="selectContact()" class="form-control" placeholder="{{_('Add an existing contact ...')}}">
+                                              <input type="text" required ng-model="searchRelatedContactQuery" typeahead-loading="conSearchLoading" ng-class="{'spinner':conSearchLoading}"typeahead="relatedContactResult as relatedContactResult.firstname + ' '+  relatedContactResult.lastname for relatedContactResult in  getResults($viewValue,'/crmengine/v1/contacts/search')| filter:$viewValue | limitTo:10" typeahead-on-select="selectContact()" class="form-control" placeholder="{{_('Add an existing contact ...')}}">
                                           </div>
                                   </div>
                                   <a href="" ng-click="newRelatedContact=true" style="color: rgb(209, 38, 16);"> + <i class="fa fa-user"></i>   or add a new contact</a>
